<resources>
    <string name="app_name">rupizzeria</string>

    <string-array name="pizzatype">
        <item>Deluxe Pizza</item>
        <item>BBQ Chicken Pizza</item>
        <item>Meatzza Pizza</item>
        <item>Build Your Own Pizza</item>
    </string-array>

    <string name="deluxe_chicago">Chicago Style: Deep Dish</string>
    <string name="deluxe_ny">NY Style: Brooklyn</string>
    <string name="bbq_chicago">Chicago Style: Pan</string>
    <string name="bbq_ny">NY Style: Thin</string>
    <string name="meatzza_chicago">Chicago Style: Stuffed</string>
    <string name="meatzza_ny">NY Style: Hand-tossed</string>
    <string name="byo_chicago">Chicago Style: Pan</string>
    <string name="byo_ny">NY Style: Hand-tossed</string>

    <string name="small_price">Small: $</string>
    <string name="medium_price">Medium: $</string>
    <string name="large_price">Large: $</string>

    <string name="order_no">Order Number: </string>
    <string name="subtotal">Subtotal: $</string>
    <string name="tax">Sales Tax: $</string>
    <string name="order_total">Order Total: $</string>

    <string name="order_placed">Order placed: </string>
    <string name="remove_pizza">Removed pizza: </string>

    <string name="max_toppings">Max 7 toppings allowed.</string>
    <string name="rupizzeria">rupizzeria</string>
    <string name="order_total2">Order Total: $</string>
    <string name="export_orders">Export Orders</string>
    <string name="back">Back</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="textview">TextView</string>
    <string name="current_order">Current Order:</string>
    <string name="order_number_1">Order Number: 1</string>
    <string name="subtotal_0_00">Subtotal: $0.00</string>
    <string name="sales_tax_0_00">Sales Tax: $0.00</string>
    <string name="order_total_0_00">Order Total: $0.00</string>
    <string name="remove_pizza2">Remove Pizza</string>
    <string name="place_order">Place Order</string>
    <string name="clear_order">Clear Order</string>
    <string name="back2">Back</string>
    <string name="order_a_pizza">ORDER A PIZZA:</string>
    <string name="type_of_pizza">Type of Pizza:</string>
    <string name="type_of_crust">Type of Crust:</string>
    <string name="chicago_style">Chicago Style</string>
    <string name="new_york_style">New York Style</string>
    <string name="size_of_pizza">Size of Pizza:</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="pizza_toppings">Pizza Toppings:</string>
    <string name="add_pizza_to_current_order">Add Pizza to Current Order</string>
    <string name="back3">Back</string>

    <string name="pizzaheader">ORDER A PIZZA:</string>
</resources>