<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:actionBarNavMode="standard">

    <ScrollView
        android:layout_width="432dp"
        android:layout_height="873dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txt_pizzaHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="@string/order_a_pizza" />
                android:text="@string/pizzaheader" />

            <EditText
                android:id="@+id/txt_pizzaSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="@string/type_of_pizza"
                tools:ignore="DuplicateIds" />

            <Spinner
                android:id="@+id/sp_pizzatype"
                android:layout_width="match_parent"
                android:layout_height="58dp" />

            <RadioGroup
                android:id="@+id/rg_pizzaCrust"
                android:layout_width="435dp"
                android:layout_height="wrap_content"
                android:checkedButton="@id/rb_chicago">

                <EditText
                    android:id="@+id/txt_pizzaCrust"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/type_of_crust" />

                <RadioButton
                    android:id="@+id/rb_chicago"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/chicago_style" />

                <RadioButton
                    android:id="@+id/rb_ny"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_york_style" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/rg_pizzaSize"
                android:layout_width="432dp"
                android:layout_height="wrap_content"
                android:checkedButton="@id/rb_small">

                <EditText
                    android:id="@+id/txt_pizzaSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/size_of_pizza" />

                <RadioButton
                    android:id="@+id/rb_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/small" />

                <RadioButton
                    android:id="@+id/rb_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medium" />

                <RadioButton
                    android:id="@+id/rb_large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large" />

            </RadioGroup>

            <EditText
                android:id="@+id/txt_pizzaToppings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="@string/pizza_toppings" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_orderRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="174dp" />

            <Button
                android:id="@+id/bt_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onAddPizza"
                android:text="@string/add_pizza_to_current_order" />

            <Button
                android:id="@+id/ExportButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back3"
                android:onClick="onBackClick"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>