<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ExportButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/orderNumbers"
        android:layout_width="153dp"
        android:layout_height="28dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/ordersList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_total2"
        app:layout_constraintBottom_toTopOf="@+id/ordersList"
        app:layout_constraintStart_toStartOf="@+id/orderNumbers"
        app:layout_constraintTop_toBottomOf="@+id/orderNumbers" />

    <TextView
        android:id="@+id/priceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/ordersList"
        app:layout_constraintEnd_toEndOf="@+id/orderNumbers"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/orderNumbers" />

    <ListView
        android:id="@+id/ordersList"
        android:layout_width="411dp"
        android:layout_height="397dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancelOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_order"
        android:onClick="cancelOrder"
        app:layout_constraintBottom_toTopOf="@+id/backsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ordersList"
        app:layout_constraintVertical_bias="0.526" />

    <Button
        android:id="@+id/backsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:onClick="onBackButtonBill"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/exportOrders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/export_orders"
        android:onClick="onExportStore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.765"
        app:layout_constraintStart_toEndOf="@+id/cancelOrder"
        app:layout_constraintTop_toBottomOf="@+id/ordersList"
        app:layout_constraintVertical_bias="0.313" />
</androidx.constraintlayout.widget.ConstraintLayout>